// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InstructorCourseStudentEditPageComponent should snap with default fields 1`] = `
<tm-instructor-course-student-edit-page
  FormValidator={[Function Object]}
  courseId="undefined"
  isEmailFieldChanged="false"
  isEnabled={[Function Boolean]}
  isStudentLoading={[Function Boolean]}
  isTeamnameFieldChanged="false"
  ngbModal={[Function NgbModal]}
  route={[Function ActivatedRoute]}
  router={[Function Router]}
  statusMessageService={[Function StatusMessageService]}
  studentService={[Function StudentService]}
>
  <tm-loading-spinner>
    <div
      class="loading-container"
    >
      <div
        class="row spinner-border text-primary"
        role="status"
      />
      <div
        class="row text-secondary"
      >
        Loading...
      </div>
    </div>
  </tm-loading-spinner>
</tm-instructor-course-student-edit-page>
`;

exports[`InstructorCourseStudentEditPageComponent should snap with student details 1`] = `
<tm-instructor-course-student-edit-page
  FormValidator={[Function Object]}
  courseId="undefined"
  editForm={[Function FormGroup]}
  isEmailFieldChanged="false"
  isEnabled={[Function Boolean]}
  isStudentLoading={[Function Boolean]}
  isTeamnameFieldChanged="false"
  ngbModal={[Function NgbModal]}
  route={[Function ActivatedRoute]}
  router={[Function Router]}
  statusMessageService={[Function StatusMessageService]}
  student={[Function Object]}
  studentService={[Function StudentService]}
>
  <tm-loading-spinner>
    <div
      class="loading-container"
    >
      <div
        class="row spinner-border text-primary"
        role="status"
      />
      <div
        class="row text-secondary"
      >
        Loading...
      </div>
    </div>
  </tm-loading-spinner>
</tm-instructor-course-student-edit-page>
`;
